<resources>
    <string name="app_name">PlazApp</string>
    <string name="title_activity_user_index">UserIndex</string>
    <string name="cargando">Cargando...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- area de menu-->
    <string name="vender">Vende</string>
    <string name="comprar">Compra</string>
    <string name="info">Ayuda</string>
    <string name="explora">Explora</string>

    <!-- Area de Registro-->
    <string name="tittleRegister">Registrate ahora !</string>
    <string name="nombreusuarioregistro">Digita tu nombre completo: </string>
    <string name="correousuarioregistro">Digita tu correo: </string>
    <string name="contraseñausuarioregistro">Digita una contraseña de registro</string>
    <string name="contraseñausuario2registro">Repite la contraseña de registro</string>
    <string name="seleccionaravatar">Selecciona un avatar (opcional)</string>
    <string name="registrar">Registrate</string>

    <!--area de venta-->
    <string name="tipoPorducto">Selecciona la clase de producto</string>
    <string name="producto">Seleccion el producto</string>
    <string name="unidad">¿Como cuantificas el producto?</string>
    <string name="cantidad">¿Cuanto deseas vender?</string>
    <string name="descripcion">¿Algo que le quieras decir a tu cliente sobre tu producto?</string>
    <string name="vende">Ofrecer producto</string>
    <string name="tittle_sale">Ofrece tu producto</string>
    <string name="ingresa_un_tipo_ej_verdura">ingresa un tipo. Ej (Verdura...)</string>
    <string name="ingresa_un_nuevo_tipo">Ingresa un nuevo tipo</string>
    <string name="registrar_nuevo_tipo">Registrar nuevo tipo</string>
    <string name="r_n_p">Registra un nuevo producto</string>
    <string name="s_t_p">seleccione el tipo de producto</string>
    <string name="i_p">Ingrese el nombre del producto</string>
    <string name="d_t">Digita el tipo</string>
    <string name="desc_typo">Da una descripcion breve del tipo</string>
    <string name="b_d_p">Breve descripcion del producto</string>
    <string name="inputmeasue">Ingresa la unidad de medida</string>
    <string name="registrymeasure">Registra una nueva unidad de medida</string>
    <string name="nameunitmeasure">nombre de la unidad de medida</string>
    <string name="prefixHintmeasure"><![CDATA[Ingrese el prefijo p.e (Kilogramos -> kg)]]></string>
    <string name="rnm">Registra una nueva medida</string>
    <string name="plus">+</string>
    <string name="priceLabel">¿Cuanto Vale lo que ofreces?</string>
    <string name="hintPrice">COP (Pesos Colombianos)</string>
    <string name="add_geo">Agregar mi ubicación</string>
    <string name="precio_fijo">Precio fijo</string>
    <string name="negociable">Negociable</string>
    <string name="ofertas_disponibles">Ofertas disponibles</string>
    <string name="ofertname">OfertName</string>
    <string name="todo">TODO</string>

</resources>
