<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".front.Sale"
    android:background="@drawable/back_alert"
    android:padding="15dp">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrymeasure"
        android:theme="@style/tittle"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputmeasue"
        android:theme="@style/fontTextDark"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameunitmeasure"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        android:id="@+id/nameMeasure"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prefixHintmeasure"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/nameMeasure"
        android:id="@+id/prefix"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/darkButton"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/prefix"
        android:text="@string/rnm"
        android:onClick="newMeasure"/>


</android.support.constraint.ConstraintLayout>