<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".front.Sale">

    <include layout="@layout/ligthboxloading"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_percent="0.02"
            android:orientation="vertical"
            android:id="@+id/leftM"/>

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_percent="0.98"
            android:orientation="vertical"
            android:id="@+id/rigthM"/>

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_percent="0.02"
            android:orientation="horizontal"
            android:id="@+id/topM"/>

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_percent="0.98"
            android:orientation="horizontal"
            android:id="@+id/bottomM"/>

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_percent="0.1"
            android:orientation="horizontal"
            android:id="@+id/startForm"/>

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_percent="0.9"
            android:orientation="horizontal"
            android:id="@+id/endForm"/>

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"
            android:id="@+id/midleV"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="TextView"
            android:theme="@style/tittle"
            app:layout_constraintTop_toBottomOf="@+id/topM"
            app:layout_constraintBottom_toTopOf="@id/startForm"
             />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/startForm"
            app:layout_constraintBottom_toTopOf="@id/endForm"
            app:layout_constraintLeft_toRightOf="@id/leftM"
            app:layout_constraintRight_toLeftOf="@id/rigthM"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tipoPorducto"
                android:theme="@style/fontTextDark"/>

            <Spinner
                android:id="@+id/Typos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/producto"
                android:theme="@style/fontTextDark"/>

            <Spinner
                android:id="@+id/product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/unidad"
                android:theme="@style/fontTextDark"/>

            <Spinner
                android:id="@+id/measure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
            </Spinner>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <android.support.constraint.Guideline
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintGuide_percent="0.5"
                    android:orientation="vertical"
                    android:id="@+id/midle"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/midle"
                    android:text="@string/cantidad"
                    android:theme="@style/fontTextDark"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/midle"
                    app:layout_constraintRight_toRightOf="parent"
                    android:inputType="number"/>

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:theme="@style/fontTextDark"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:inputType="textMultiLine" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/endForm"
            app:layout_constraintBottom_toTopOf="@id/bottomM"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vende"

                android:gravity="center_horizontal"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>