<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum = "1"
    android:background="@drawable/register"
    tools:context="com.plazapp.eci.plazapp.front.RegisterUser"
    >

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.5"
        android:id="@+id/midleV"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.01"
        android:id="@+id/marginLeft"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.99"
        android:id="@+id/marginRight"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.7"
        android:id="@+id/midleH"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.1"
        android:id="@+id/firstSection"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.85"
        android:id="@+id/secondSection"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:id="@+id/leftQuart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:id="@+id/rigthQuart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.75"
        android:orientation="vertical" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/firstSection"
        android:text="@string/tittleRegister"
        android:theme="@style/tittleWhite"
        android:background="@color/colorAccent"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/firstSection"
        app:layout_constraintBottom_toTopOf="@id/midleH"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/userNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreusuarioregistro"
            android:theme="@style/fontTextDark"/>

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:theme="@style/ediTextlight"/>

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correousuarioregistro"
            android:theme="@style/fontTextDark"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:theme="@style/ediTextlight"/>

        <TextView
            android:id="@+id/passLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contraseñausuarioregistro"
            android:theme="@style/fontTextDark"/>

        <TextView
            android:id="@+id/informerPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/passLabel"
            app:layout_constraintTop_toBottomOf="@id/passInput"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/passInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:theme="@style/ediTextlight"/>

        <TextView
            android:id="@+id/informer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/textPass2"
            app:layout_constraintTop_toBottomOf="@id/passInput"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textPass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contraseñausuario2registro"
            android:theme="@style/fontTextDark"/>

        <EditText
            android:id="@+id/passInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:theme="@style/ediTextlight"/>

    </LinearLayout>

    <!--LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/midleH"
        app:layout_constraintBottom_toTopOf="@id/secondSection"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionaravatar"
            android:theme="@style/fontTextDark"/>


    </LinearLayout-->

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="2dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/leftQuart"
        app:layout_constraintRight_toRightOf="@id/rigthQuart"
        app:layout_constraintTop_toBottomOf="@id/secondSection"
        android:text="@string/registrar"
        android:onClick="registrar"/>
</android.support.constraint.ConstraintLayout>
